[package]
name = "wlanapi"
version = "0.1.0"
authors = ["xudafeng <xudafeng@126.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "wlanapi"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wlanapi"] }
